# GifLibSample

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/gifndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gif.h  native-lib.cpp
app/src/main/java/com/example/gifndk/: GifHandler.java  MainActivity.java  note
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/gifndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
